--- a/css/style.css
+++ b/css/style.css
@@ -57,12 +57,20 @@ li{
   padding: 0px 10px;
   line-height: 70px;
   font-size: 10px;
+  text-decoration: none;
+}
+a {
+  text-decoration: none;
+  color: white;
 }
 .nav {
   width: 80%;
   height: 80px;
   margin: auto;
   margin-top: 12px;
+}
+a:hover {
+  color: orange;
 }
 .logo {
   background-image: url(../img/logo.svg);
@@ -72,10 +80,7 @@ li{
   margin-top: 10px;
 
 }
-.left-menu li:hover {
-  color: orange;
-  cursor: pointer;
-}
+/* /nav */
 /* tutor login and plan */
 #login, #plan{
   line-height: 20px;
@@ -85,7 +90,7 @@ li{
 }
 #login:hover {
   background: white;
-  color: black;
+  color: orange;
   cursor: pointer;
 }
 #login {
@@ -100,14 +105,38 @@ li{
   cursor: pointer;
 }
 /* /tutor login and plan */
-/* /nav */
-.banner {
-  background-image: url(../img/banner_header.png);
-  width: 100%;
-  height: 100%;
-  background-size: contain;
-  background-repeat: no-repeat;
+/* banner settings */
+.big-image {
+  position: relative;
+  height: 470px;
 }
+.banner-title {
+  position: absolute;
+  width: 50%;
+  top: 50%;
+  transform: translateY(-50%);
+  color: white;
+}
+.banner-image {
+  background-image: url(../img/banner_header.png);
+  background-size: 50%;
+  background-repeat: no-repeat;
+  background-position: 105% 105%;
+
+}
+.bottom {
+  color: white;
+  text-decoration: none;
+  padding: 10px;
+  margin-top: 20px;
+  display: inline-block;
+  border-radius: 3px
+}
+.bottom:hover {
+  color: orange;
+}
+/* /banner settings */
+
 /* /header */
 
 /* main */
